tests/NormalTests/paczka1/small_fuzzy/79429834.err
Error in line 1: MjfK2ftV S254 4,7
Error in line 2: MjfK2ftV S5 70,6
